--- a/index.html
+++ b/index.html
@@ -1,265 +1,136 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Restraunt</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pizza restaurant in Dublin">
+    <meta name="keywords" content="pizza, pizzeria, restaurant, dine, Ireland, Dublin">
+    <link rel="stylesheet" href="assets/css/style.css">
+
+    <title>Pizza Restaurant</title>
 </head>
 
 <body>
+
+    <!-- Navigation section -->
     <nav class="navbar">
-        <div class="navbar-container container">
-            <input type="checkbox" name="" id="">
-            <div class="hamburger-lines">
-                <span class="line line1"></span>
-                <span class="line line2"></span>
-                <span class="line line3"></span>
-            </div>
-            <ul class="menu-items">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#food">Category</a></li>
-                <li><a href="#food-menu">Menu</a></li>
-                <li><a href="#testimonials">Testimonial</a></li>
-                <li><a href="#contact">Contact</a></li>
+        <div class="navbar-container">
+            <h1 class="logo">
+                Hero Pizza
+            </h1>
+            <ul class="menubar">
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="#about">About</a>
+                </li>
+                <li>
+                    <a href="#menu">Menu</a>
+                </li>
+                <li>
+                    <a href="#bookings">Bookings</a>
+                </li>
             </ul>
-            <h1 class="logo">RS</h1>
         </div>
     </nav>
-    <section class="showcase-area" id="showcase">
+
+    <!-- Hero image and slogan -->
+
+    <section class="showcase-area">
         <div class="showcase-container">
-            <h1 class="main-title" id="home">Eat Right Food</h1>
-            <p>Eat Healty, it is good for our health.</p>
-            <a href="#food-menu" class="btn btn-primary">Menu</a>
+            <h1><span>Say yes to pizza!</span></h1>
+            <span class="cen">Woodfire oven & family owned pizzeria</span>
+            <a class="button" href="#menu">Menu</a>
         </div>
     </section>
 
+    <!-- About Us section -->
     <section id="about">
-        <div class="about-wrapper container">
+        <h2 class="about-title">About Us</h2>
+        <div class="about-wrapper">
             <div class="about-text">
-                <p class="small">About Us</p>
-                <h2>We've beem making healthy food last for 10 years</h2>
+                <img src="./assets/images/about-us.webp" alt="about us">
+                <h3>
+                    Making Neapolitan style pizza for over 20 years
+                </h3>
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse ab
-                    eos omnis, nobis dignissimos perferendis et officia architecto,
-                    fugiat possimus eaque qui ullam excepturi suscipit aliquid optio,
-                    maiores praesentium soluta alias asperiores saepe commodi
-                    consequatur? Perferendis est placeat facere aspernatur!
+                    Family owned pizzeria crazy about pizza.
+                    Baked in a woodfire oven, we bring excellent quality, delicious flavour and great
+                    service.
+                    That's how we conquered our loyal customers and became one of the top pizzerias in Ireland.
+                </p>
+                <h3>
+                    Fresh Ingredients
+                </h3>
+                <p>
+                    We offer the best Italian gastronomic excellence by using quality ingredients such as
+                    organically grown flour, vegetables and herbs.
+                    The integration between the ingredients and mixing allows us to create new proposals and update our
+                    menu.
                 </p>
             </div>
-            <div class="about-img">
-                <img src="https://i.postimg.cc/mgpwzmx9/about-photo.jpg" alt="food" />
-            </div>
         </div>
     </section>
-    <section id="food">
-        <h2>Types of food</h2>
-        <div class="food-container container">
-            <div class="food-type fruite">
-                <div class="img-container">
-                    <img src="https://i.postimg.cc/yxThVPXk/food1.jpg" alt="error" />
-                    <div class="img-content">
-                        <h3>fruite</h3>
-                        <a href="https://en.wikipedia.org/wiki/Fruit" class="btn btn-primary" target="blank">learn
-                            more</a>
-                    </div>
-                </div>
-            </div>
-            <div class="food-type vegetable">
-                <div class="img-container">
-                    <img src="https://i.postimg.cc/Nffm6Rkk/food2.jpg" alt="error" />
-                    <div class="img-content">
-                        <h3>vegetable</h3>
-                        <a href="https://en.wikipedia.org/wiki/Vegetable" class="btn btn-primary" target="blank">learn
-                            more</a>
-                    </div>
-                </div>
-            </div>
-            <div class="food-type grin">
-                <div class="img-container">
-                    <img src="https://i.postimg.cc/76ZwsPsd/food3.jpg" alt="error" />
-                    <div class="img-content">
-                        <h3>grin</h3>
-                        <a href="https://en.wikipedia.org/wiki/Grain" class="btn btn-primary" target="blank">learn
-                            more</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section id="food-menu">
-        <h2 class="food-menu-heading">Food Menu</h2>
-        <div class="food-menu-container container">
-            <div class="food-menu-item">
-                <div class="food-img">
-                    <img src="https://i.postimg.cc/wTLMsvSQ/food-menu1.jpg" alt="" />
-                </div>
-                <div class="food-description">
-                    <h2 class="food-titile">Food Menu Item 1</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non,
-                        quae.
-                    </p>
-                    <p class="food-price">Price: &#8377; 250</p>
-                </div>
-            </div>
 
-            <div class="food-menu-item">
-                <div class="food-img">
-                    <img src="https://i.postimg.cc/sgzXPzzd/food-menu2.jpg" alt="error" />
-                </div>
-                <div class="food-description">
-                    <h2 class="food-titile">Food Menu Item 2</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non,
-                        quae.
-                    </p>
-                    <p class="food-price">Price: &#8377; 250</p>
-                </div>
-            </div>
-            <div class="food-menu-item">
-                <div class="food-img">
-                    <img src="https://i.postimg.cc/8zbCtYkF/food-menu3.jpg" alt="" />
-                </div>
-                <div class="food-description">
-                    <h2 class="food-titile">Food Menu Item 3</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non,
-                        quae.
-                    </p>
-                    <p class="food-price">Price: &#8377; 250</p>
+    <!-- Pizza Menu section -->
+    <section id="menu">
+        <h2 class="pizza-menu">Pizza Menu</h2>
+        <div class="pizza-menu-container">
+            <div class="pizza-menu-item">
+                <img src="./assets/images/margherita.webp" alt="margherita">
+                <div class="pizza-description">
+                    <h3 class="pizza-title">Margherita</h3>
+                    <p>San marzano DOP, fior di latte, parmigiano reggiano, basil, organic extra virgin olive oil</p>
+                    <p class="pizza-price">Price: &#8364; 14</p>
                 </div>
             </div>
-            <div class="food-menu-item">
-                <div class="food-img">
-                    <img src="https://i.postimg.cc/Yq98p5Z7/food-menu4.jpg" alt="" />
-                </div>
-                <div class="food-description">
-                    <h2 class="food-titile">Food Menu Item 4</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non,
-                        quae.
-                    </p>
-                    <p class="food-price">Price: &#8377; 250</p>
+            <div class="pizza-menu-item">
+                <img src="./assets/images/bufalina.webp" alt="bufalina">
+                <div class="pizza-description">
+                    <h3 class="pizza-title">Bufalina</h3>
+                    <p>San marzano DOP, fior di latte, buffalo mozzarella, parmesan, organic extra virgin olive oil</p>
+                    <p class="pizza-price">Price: &#8364; 15</p>
                 </div>
             </div>
-            <div class="food-menu-item">
-                <div class="food-img">
-                    <img src="https://i.postimg.cc/KYnDqxkP/food-menu5.jpg" alt="" />
-                </div>
-                <div class="food-description">
-                    <h2 class="food-titile">Food Menu Item 5</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non,
-                        quae.
-                    </p>
-                    <p class="food-price">Price: &#8377; 250</p>
+            <div class="pizza-menu-item">
+                <img src="./assets/images/vegan-rustica.webp" alt="vegan rustica">
+                <div class="pizza-description">
+                    <h3 class="pizza-title">Vegan Rustica</h3>
+                    <p>San marzano DOP, vegan mozzarella, aubergines, cherry tomatoes, garlic, toasted pine nuts,
+                        rocket,
+                        modena
+                        balsamic</p>
+                    <p class="pizza-price">Price: &#8364; 16</p>
                 </div>
             </div>
-            <div class="food-menu-item">
-                <div class="food-img">
-                    <img src="https://i.postimg.cc/Jnxc8xQt/food-menu6.jpg" alt="" />
+            <div class="pizza-menu-item">
+                <img src="./assets/images/capricciosa.webp" alt="capricciosa">
+                <div class="pizza-description">
+                    <h3 class="pizza-title">Capricciosa</h3>
+                    <p>San marzano DOP, fior di latte, parmesan, mushrooms, salami, ham, olives, artichokes, organic
+                        extra
+                        virgin olive oil</p>
+                    <p class="pizza-price">Price: &#8364; 17</p>
                 </div>
-                <div class="food-description">
-                    <h2 class="food-titile">Food Menu Item 6</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non,
-                        quae.
-                    </p>
-                    <p class="food-price">Price: &#8377; 250</p>
+            </div>
+            <div class="pizza-menu-item">
+                <img src="./assets/images/4-formagi.webp" alt="4 formagi">
+                <div class="pizza-description">
+                    <h3 class="pizza-title">4 Formagi</h3>
+                    <p>Fior di latte, emmental, auriccio, gorgonzola, parmesan, organic extra virgin olive oil</p>
+                    <p class="pizza-price">Price: &#8364; 18</p>
+                </div>
+            </div>
+            <div class="pizza-menu-item">
+                <img src="./assets/images/prosciutto-di-parma.webp" alt="prosciutto di parma">
+                <div class="pizza-description">
+                    <h3 class="pizza-title">Prosciutto di Parma</h3>
+                    <p>Fior di latte, Parma ham, cherry tomatoes, burrata, pesto, organic extra virgin olive oil</p>
+                    <p class="pizza-price">Price: &#8364; 19</p>
                 </div>
             </div>
         </div>
     </section>
-    <section id="testimonials">
-        <h2 class="testimonial-title">What Our Customers Say</h2>
-        <div class="testimonial-container container">
-            <div class="testimonial-box">
-                <div class="customer-detail">
-                    <div class="customer-photo">
-                        <img src="https://i.postimg.cc/5Nrw360Y/male-photo1.jpg" alt="" />
-                        <p class="customer-name">Ross Lee</p>
-                    </div>
-                </div>
-                <div class="star-rating">
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                </div>
-                <p class="testimonial-text">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit
-                    voluptas cupiditate aspernatur odit doloribus non.
-                </p>
-
-            </div>
-            <div class="testimonial-box">
-                <div class="customer-detail">
-                    <div class="customer-photo">
-                        <img src="https://i.postimg.cc/sxd2xCD2/female-photo1.jpg" alt="" />
-                        <p class="customer-name">Amelia Watson</p>
-                    </div>
-                </div>
-                <div class="star-rating">
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                </div>
-                <p class="testimonial-text">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit
-                    voluptas cupiditate aspernatur odit doloribus non.
-                </p>
-
-            </div>
-            <div class="testimonial-box">
-                <div class="customer-detail">
-                    <div class="customer-photo">
-                        <img src="https://i.postimg.cc/fy90qvkV/male-photo3.jpg" alt="" />
-                        <p class="customer-name">Ben Roy</p>
-                    </div>
-                </div>
-                <div class="star-rating">
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                </div>
-                <p class="testimonial-text">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit
-                    voluptas cupiditate aspernatur odit doloribus non.
-                </p>
-
-            </div>
-        </div>
-    </section>
-    <section id="contact">
-        <div class="contact-container container">
-            <div class="contact-img">
-                <img src="https://i.postimg.cc/1XvYM67V/restraunt2.jpg" alt="" />
-            </div>
-
-            <div class="form-container">
-                <h2>Contact Us</h2>
-                <input type="text" placeholder="Your Name" />
-                <input type="email" placeholder="E-Mail" />
-                <textarea cols="30" rows="6" placeholder="Type Your Message"></textarea>
-                <a href="#" class="btn btn-primary">Submit</a>
-            </div>
-        </div>
-    </section>
-    <footer id="footer">
-        <h2>Restraunt &copy; all rights reserved</h2>
-    </footer>
-
-</body>
-
-</html>
