--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-
+    
     <!-- Navigation section -->
     <nav class="navbar">
         <div class="navbar-container">
@@ -38,11 +38,10 @@
     </nav>
 
     <!-- Hero image and slogan -->
-
     <section class="showcase-area">
         <div class="showcase-container">
             <h1><span>Say yes to pizza!</span></h1>
-            <span class="cen">Woodfire oven & family owned pizzeria</span>
+            <span class="central">Woodfire oven & family owned pizzeria</span>
             <a class="button" href="#menu">Menu</a>
         </div>
     </section>
@@ -52,7 +51,6 @@
         <h2 class="about-title">About Us</h2>
         <div class="about-wrapper">
             <div class="about-text">
-                <img src="./assets/images/about-us.webp" alt="about us">
                 <h3>
                     Making Neapolitan style pizza for over 20 years
                 </h3>
@@ -71,6 +69,9 @@
                     The integration between the ingredients and mixing allows us to create new proposals and update our
                     menu.
                 </p>
+            </div>
+            <div class="about-img">
+                <img src="./assets/images/about-us.webp" alt="about us">
             </div>
         </div>
     </section>
@@ -134,3 +135,94 @@
             </div>
         </div>
     </section>
+
+    <!-- Booking section -->
+    <section id="bookings">
+        <div class="container">
+            <div class="container-time">
+                <h2 class="heading">Opening Days and Time</h2>
+                <h3 class="heading-days">Monday-Friday</h3>
+                <p>3pm - 10pm</p>
+
+                <h3 class="heading-days">Saturday and Sunday</h3>
+                <p>3pm - 12am</p>
+
+                <hr>
+
+                <h4 class="heading-phone">Contact Us: (01) 872-4391</h4>
+
+                <hr>
+
+                <h4 class="heading-address">Italian Quarter, Bloom Lane, North City, Dublin, D01 C850</h4>
+
+            </div>
+
+            <div class="container-form">
+                <form action="confirmation.html" target="_blank" method="get">
+
+                    <h2 class="heading heading-yellow">Reservation Online</h2>
+                    <div class="form-field">
+                        <label for="name">Full Name:</label>
+                        <input type="text" id="fullname" placeholder="Full Name" required>
+                    </div>
+                    <div class="form-field">
+                        <label for="phone">Phone:</label>
+                        <input type="tel" id="phone" placeholder="Your phone number" required>
+                    </div>
+                    <div class="form-field">
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" placeholder="Your email" required>
+                    </div>
+                    <div class="form-field">
+                        <label for="date">Date:</label>
+                        <input type="date" id="date">
+                    </div>
+                    <div class="form-field">
+                        <label for="time">Time:</label>
+                        <input type="time" id="time">
+                    </div>
+                    <div class="form-field">
+                        <label for="people" id="people">How many people?</label>
+                        <select name="select" id="#">
+                            <option value="1">1 person</option>
+                            <option value="2">2 person</option>
+                            <option value="3">3 person</option>
+                            <option value="4">4 person</option>
+                            <option value="5+">5+ person</option>
+                        </select>
+                    </div>
+
+                    <button class="btn">Submit</button>
+
+                </form>
+
+            </div>
+        </div>
+
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <div class="social-media">
+            <a href="https://facebook.com" target="_blank" rel="noopener"
+                aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
+            <a href="https://twitter.com" target="_blank" rel="noopener"
+                aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter-square"></i></a>
+            <a href="https://instagram.com" target="_blank" rel="noopener"
+                aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
+            <a href="https://youtube.com" target="_blank" rel="noopener"
+                aria-label="Visit our YouTube page (opens in a new tab)"><i class="fab fa-youtube-square"></i></a>
+            <a href="https://tiktok.com" target="_blank" rel="noopener"
+                aria-label="Visit our YouTube page (opens in a new tab)"><i class="fa-brands fa-tiktok"></i></a>
+        </div>
+    </footer>
+
+    <!-- font awesome script -->
+    <script src="https://kit.fontawesome.com/83bea6457b.js" crossorigin="anonymous"></script>
+
+
+
+
+</body>
+
+</html>
